<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">ahmad_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_palindrome">Palindrome</string>
    <string name="msg_firstname_lastn">Firstname Lastname</string>
    <string name="lbl_second_screen">Second Screen</string>
    <string name="msg_selected_user_n">Selected User Name</string>
    <string name="lbl_next">NEXT</string>
    <string name="lbl_third_screen">Third Screen</string>
    <string name="lbl_email_email_com">email@email.com</string>
    <string name="lbl_choose_a_user">Choose a User</string>
    <string name="lbl_check">CHECK</string>
    <string name="lbl_john_doe">John Doe</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="preference_file_key">com.ahmadsapplication.app.PREFERENCE_KEY</string>
</resources>
