<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:id="@+id/linearSecondScreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">

        <LinearLayout
            android:id="@+id/linearColumnarrowleft"
            style="@style/groupStylewhite_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30pxh"
            android:layout_marginEnd="@dimen/_1pxh"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginBottom="@dimen/_13pxv"
                android:gravity="start"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:id="@+id/linearRowarrowleft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/backSecondScreen"
                        android:layout_width="@dimen/_7pxh"
                        android:layout_height="@dimen/_14pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_arrowleft" />

                    <TextView
                        android:id="@+id/txtTitle"
                        style="@style/txtPoppinssemibold18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_84pxh"
                        android:layout_weight="0.95"
                        android:ellipsize="end"
                        android:lineSpacingExtra="@dimen/_9pxh"
                        android:singleLine="true"
                        android:text="@string/lbl_second_screen"
                        tools:text="@string/lbl_second_screen" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtWelcome"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true" android:text="@string/lbl_welcome"
            style="@style/txtPoppinsregular12" tools:text="@string/lbl_welcome"/>

        <TextView
            android:id="@+id/txtUserName"
            style="@style/txtPoppinssemibold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_9pxh"
            android:singleLine="true"
            android:text="@string/lbl_john_doe"
            tools:text="@string/lbl_john_doe" />
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtSelectedUserN"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_226pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_12pxh"
            android:singleLine="true"
            android:text="@string/msg_selected_user_n"
            style="@style/txtPoppinssemibold24" tools:text="@string/msg_selected_user_n"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseAUser"
            style="@style/btnSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_220pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_10pxv"
            android:singleLine="true"
            android:text="@string/lbl_choose_a_user"
            android:textAllCaps="false"
            tools:text="@string/lbl_choose_a_user" />
    </LinearLayout>
</layout>
