<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout android:id="@+id/frameFirstScreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/img_background1"
        >

        <LinearLayout android:id="@+id/linearColumnicphoto"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_142pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_142pxv"
            android:layout_width="match_parent" android:orientation="vertical">

            <ImageView android:id="@+id/imageIcphoto"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_116pxh"
                android:layout_marginEnd="@dimen/_94pxh"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_width="@dimen/_116pxh"
                android:scaleType="fitXY"

                tools:ignore="ContentDescription"
                android:src="@drawable/img_icphoto"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
                android:ellipsize="end" android:hint="@string/lbl_name"
                android:id="@+id/edtUserName" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_58pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_600_5b"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
                android:ellipsize="end"
                android:hint="@string/lbl_palindrome"
                android:id="@+id/edtPalindrom" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_600_5b"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCheck"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_45pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_check"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_check"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnNext"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_next"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
        </LinearLayout>
    </FrameLayout>
</layout>
